Fixed spacing between group portlets.

--- a/src/ututi/public/newstyle.css
+++ b/src/ututi/public/newstyle.css
@@ -684,8 +684,12 @@ ul#links-messages  {
 }
 #aside .module-top{
     background: url('img/module-top-bg-grey.png') no-repeat center 3px;
-    height:28px;
+    height: 28px;
     margin:auto 0;
+    margin-top: 8px;
+}
+#aside .first {
+    margin-top: 0;
 }
 #aside .secondModuleLayer, .secondModuleLayer{
     margin:10px 0 0 0;
